fix layout issues, support cloud coverage

--- a/css/game.css
+++ b/css/game.css
@@ -105,7 +105,7 @@ hr {
 
 .detailedData .descriptors {
     float: left;
-    width: 50%;
+    width: 0%;
     line-height: 2.0em;
     text-align: left;
     display: block;
@@ -115,7 +115,7 @@ hr {
 
 .detailedData .descriptors p {
     font-family: "Roboto Mono";
-    width: 50%;
+    width: 100%;
     line-height: 2.0em;
     text-align: left;
     display: block;
@@ -123,7 +123,7 @@ hr {
 
 .detailedData .values {
     float: right;
-    width: 50%;
+    width: 15%;
     line-height: 2.0em;
     text-align: right;
     display: block;
@@ -133,7 +133,7 @@ hr {
 
 .detailedData .values p {
     font-family: "Roboto Mono";
-    width: 50%;
+    width: 100%;
     line-height: 2.0em;
     text-align: right;
     display: block;
